   Version 0.49
   Version 0.48
   Version 0.47
   Version 0.46
   Version 0.45
   Version 0.44
   Version 0.43
   Version 0.42
   Version 0.41
   Version 0.40
   Version 0.39
   Version 0.38
   Version 0.37
   Version 0.36
   Version 0.35

-----------------------------------------------------------------------
 Version 0.54
 ============

 Released on 
  
 New features and improvements:

   - 

 Bug fixes:

   - 

 Other changes:

   - ofaIExeCloseClose interface is renamed to ofaIExeClose (todo #1067).

-----------------------------------------------------------------------
 Version 0.53
 ============

 Released on 2016-04-07
  
 New features and improvements:

   - DDL Core v 29
   - DDL VAT v 5
   - Import a default accounts chart on dossier creation (todo #1051).
   - Export a dynamic list of exportable objects (todo #519).
   - Import a dynamic list of importable objects (todo #520).
   - VATForm: make it exportable (todo #940).
   - VATForm: make it importable (todo #939).
   - Import assistant ask for user confirmation before emptying a table (todo #1059).
   - ImporterCSV: new general CSV plugin.
   - ImporterPdfBourso: new plugin which replace (obsoleted) ImportBoursoPdf one.
   - ImporterPdfLcl: new plugin which replace (obsoleted) ImportLCLPdf one.
   - ImporterTxtBourso: new plugin which replace (obsoleted) ImportBourso one.
   - ImporterTxtLcl: new plugin which replace (obsoleted) ImportLcl one.
   - Specialized importers may provide their own format (todo #1062).
   - BAT file import format is reviewed to be compatible with export format (todo #1068).

 Bug fixes:

   - Remove underlines of detached page titles.

 Other changes:

   - Fix import architecture with ofaIImporter/ofaIImportable interfaces (todo #915).
   - myIWindow: remove all references to main window.
   - myIWindow::get_key_prefix(): new method.
   - ofaApplication: implements new ofaIGetter interface.
   - ofaExtension: now passes the ofaIGetter (instead of the GApplication).