@@ -1,0 +1,44 @@
+/*
+ * Open Freelance Accounting
+ * A double-entry accounting application for freelances.
+ *
+ * Copyright (C) 2014,2015,2016 Pierre Wieser (see AUTHORS)
+ *
+ * Open Freelance Accounting is free software; you can redistribute it
+ * and/or modify it under the terms of the GNU General Public License as
+ * published by the Free Software Foundation; either version 2 of the
+ * License, or (at your option) any later version.
+ *
+ * Open Freelance Accounting is distributed in the hope that it will be
+ * useful, but WITHOUT ANY WARRANTY; without even the implied warranty
+ * of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+ * General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with Open Freelance Accounting; see the file COPYING. If not,
+ * see <http://www.gnu.org/licenses/>.
+ *
+ * Authors:
+ *   Pierre Wieser <pwieser@trychlos.org>
+ */
+
+#ifndef __OPENBOOK_API_OFA_CORE_H__
+#define __OPENBOOK_API_OFA_CORE_H__
+
+/**
+ * SECTION: ofa_core
+ * @short_description: Core functions
+ * @include: openbook/ofa-core.h
+ */
+
+#include <glib.h>
+
+G_BEGIN_DECLS
+
+const gchar  *ofa_core_get_copyright( void );
+
+const gchar **ofa_core_get_authors( void );
+
+G_END_DECLS
+
+#endif /* __OPENBOOK_API_OFA_COUNTER_H__ */
