@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <gresources>
   <gresource prefix="/org/trychlos/openbook/mysql">
+    <file>ofa-mysql-about.ui</file>
     <file>ofa-mysql-editor-display.ui</file>
     <file>ofa-mysql-editor-enter.ui</file>
     <file>ofa-mysql-prefs-bin.ui</file>
