@@ -199,8 +199,6 @@ ofaHub         *ofa_application_get_hub       ( const ofaApplication *applicatio
 
 GMenuModel     *ofa_application_get_menu_model( const ofaApplication *application );
 
-const gchar    *ofa_application_get_copyright ( const ofaApplication *application );
-
 G_END_DECLS
 
 #endif /* __OFA_APPLICATION_H__ */
